chore: rewrite README, exclude __CLEANUP__ and .vscode from repo
- Rewrite README.md with accurate project description and tech stack
- Add __CLEANUP__/, .vscode/ to .gitignore and untrack existing files

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ next-env.d.ts
 
 # Documentation (internal notes)
 /docs/
+
+# Cleanup scripts (internal tooling)
+/__CLEANUP__/
+
+# Editor config
+.vscode/
