--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "match-sorter": "^8.0.0",
     "motion": "^11.17.0",
     "next": "16.0.10",
+    "next-intl": "^4.8.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.4.1",
@@ -110,6 +111,7 @@
     "@types/sort-by": "^1.2.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "baseline-browser-mapping": "^2.10.0",
     "dotenv": "^17.3.1",
     "drizzle-kit": "^0.31.9",
     "husky": "^9.1.7",
